--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,55 @@
 body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;  margin: 0;  font-family: Bahnschrift, monospace, sans-serif; }
 
-.BORDER {  padding: 1px; max-width:54rem; border-style: solid; border-radius: 3px; border-width: 1px; border-color: #F0D0A0;  background-color: #FFF; color: #000F00; }
+.BORDER {  padding: 1px; max-width:54rem; border-style: solid; border-radius: 4px; border-width: 1px; border-color: #EEEEEE;  background-color: #FFF; color: #00FF00; }
 
 .KNMAIN    { display:table;       margin: 4px;  min-height: 20px;  font-family :inherit; font-size: 11px; font-weight:400; border-color: #F0D0A0; border-style: solid; } 
 .KNSEP     { display: table-cell; min-width:30px; max-width:30px; float:left; }
-.KNCOL     { display: table-cell; min-width:107px; max-width:107px; float:left; border-color: #BB8855; border-style: solid; padding: 2px; }
-.KNBUTTON  { display: table-cell; min-width:107px; max-width:107px; float:left; border-color: #F0D0A0; border-style: solid; padding: 2px; text-align:center; }
 
 
-.KNTABLE  {  display:table; color:#000000; font-family: Bahnschrift,monospace; font-size: 11px; height: 18px;  page-break-after: always  }
+
+.KNTABLE  {  display:table; color:#000000; font-family: Bahnschrift,monospace; font-size: 11px; height: 18px;  page-break-after: always; border-color: #EEEEEE; }
 .NOTABLE  { display:none; }
 
 .KNLINE    { display:table-cell; vertical-align: top;  width:53rem; padding: 1px; float: left;  min-height: 20px;  font-family :inherit; font-size: 11px; font-weight:400; text-align: center; } 
 .NONE      { color:#000000;  }
-.DARK      { color:#000000; border-color: #806030; border-style:solid; }
-.HEAVY     { color:#000000; border-color: #F5A020; border-style:solid; }
 .BRIGHT    { color:#000000; border-color: #F0D0A0; border-style:solid; }
 
-.RIM      {  height: 0px; margin: 2px; text-align:center; border-color: #F0D0A0; border-style: solid; float: left; background-color:transparent; font-family: inherit; font-size: inherit; font-weight:600; color: #F0D0A0; }
-.BOX      {  height:40px; margin: 2px; text-align:center; border-color: #F0D0A0; border-style: solid; float: left; background-color:transparent; font-family: inherit; font-size: inherit; font-weight:600; color: #F0D0A0; }
+
+
+
+
+
+.NOTE     { padding: 1px; border-color: inherit; border-style: solid; border-width: 1px ; float: left; text-align: left;  font-family: inherit; font-size: 9px; font-weight:inherit; } 
+.FIELD    { overflow:hidden;  padding: 1px; border: none; float: left;                                  font-family: inherit; font-size: inherit; font-weight:inherit; } 
+.RIM      {  height: 0px; margin: 2px; text-align:center; border-color: #CED1D3; border-style: solid; float: left; background-color:transparent; }
+.KNBUTTON  { display: table-cell; min-width:107px; max-width:107px; float:left; border-style: solid; padding: 2px; text-align:center;border-color:inherit }
+
+
+.DOMCOLOR { color: #D0C070; border-color: #D0C070; } 
+
+
+.RISKEDIT  { color:#716230; border-color: #A19046; border-style:solid; background:#D0C070 }
+.RISKBACK  { background: #817137; border-color: #817137; color:white;} 
+.RISKCOLOR { color: #817137; border-color: #817137; } 
+
+.FILEBACK  { background: #503609; border-color: #503609; color:white;} 
+.FILECOLOR { color: #503609; border-color: #503609; } 
+.FILEBOX   { color: white; background: #503609; padding: 2px; border: solid 2px; font-size : 1.1em;	text-align: center;	width : 328px; height : 30px; }
+
+.DROP      {  height:40px; margin: 2px; text-align:center; border-color: #CED1D3; border-style: solid; float: left; background-color:transparent; font-family: inherit; font-size: inherit; font-weight:600; color: #CED1D3; }
+
+
+
 
 
 .SWITCH   {                   padding: 1px; border: none; font-size: 1em; font-weight:400;  } 
 .BIGCELL  {                   padding: 1px;               float: left; color:inherit;min-height: 48px; font-family: inherit; font-size: 0.8em; font-weight:400; text-align: center; background-color: inherit; } 
-.FIELD    { overflow:hidden;  padding: 1px; border: none; float: left;                                  font-family: inherit; font-size: inherit; font-weight:inherit; color: inherit;} 
-.BUTTON   { color: white; border-radius: 4px; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2); background: #f2bb69; padding: 2px; border: solid 2px; font-size : 1.1em;
+.BUTTON   { color: white; border-radius: 4px; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2); padding: 2px; border: solid 2px; font-size : 1.1em;
 			text-align: center;	width : 328px; height : 30px; }
 .HIDE	  { display:none; }
 .FONT24   { font-size: 24px; }
 .PAGE     { break-before: always;  page-break-before: always; display: block; } 
 
-.NOTE     { padding: 1px; border-color: #F0D0A0; border-style: solid; border-width: 1px ; float: left; text-align: left;  font-family: inherit; font-size: 9px; font-weight:inherit; color: inherit;} 
 
 .DASH     { width: 0.8rem; text-align: center; border-left-color: #F0D0A0; border-left-style: solid; border-left-width: 1px; }		
 .SEP      { width: 0.8rem; text-align: center; }		
