--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;  margin: 0;  font-family: Bahnschrift, monospace, sans-serif; }
 
-.BORDER {  padding: 1px; max-width:54rem; border-style: solid; border-radius: 4px; border-width: 1px; border-color: #EEEEEE;  background-color: #FFF; color: #00FF00; }
+.BORDER {  padding: 1px; max-width:900px; border-style: solid; border-radius: 4px; border-width: 1px; border-color: #EEEEEE;  background-color: #FFF; color: #00FF00; }
 
 .KNMAIN    { display:table;       margin: 4px;  min-height: 20px;  font-family :inherit; font-size: 11px; font-weight:400; border-color: #F0D0A0; border-style: solid; } 
 .KNSEP     { display: table-cell; min-width:30px; max-width:30px; float:left; }
@@ -10,7 +10,7 @@ body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; 
 .KNTABLE  {  display:table; color:#000000; font-family: Bahnschrift,monospace; font-size: 11px; height: 18px;  page-break-after: always; border-color: #EEEEEE; }
 .NOTABLE  { display:none; }
 
-.KNLINE    { display:table-cell; vertical-align: top;  width:53rem; padding: 1px; float: left;  min-height: 20px;  font-family :inherit; font-size: 11px; font-weight:400; text-align: center; } 
+.KNLINE    { display:table-cell; vertical-align: top;  width:880px; padding: 1px; float: left;  min-height: 20px;  font-family :inherit; font-size: 11px; font-weight:400; text-align: center; } 
 .NONE      { color:#000000;  }
 .BRIGHT    { color:#000000; border-color: #F0D0A0; border-style:solid; }
 
@@ -22,7 +22,7 @@ body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; 
 .NOTE     { padding: 1px; border-color: inherit; border-style: solid; border-width: 1px ; float: left; text-align: left;  font-family: inherit; font-size: 9px; font-weight:inherit; } 
 .FIELD    { overflow:hidden;  padding: 1px; border: none; float: left;                                  font-family: inherit; font-size: inherit; font-weight:inherit; } 
 .RIM      {  height: 0px; margin: 2px; text-align:center; border-color: #CED1D3; border-style: solid; float: left; background-color:transparent; }
-.KNBUTTON  { display: table-cell; min-width:107px; max-width:107px; float:left; border-style: solid; padding: 2px; text-align:center;border-color:inherit }
+.KNBUTTON  { display: table-cell; min-width:170px; max-width:170px; float:left; border-style: solid; padding: 2px; text-align:center;border-color:inherit }
 
 
 .DOMCOLOR { color: #D0C070; border-color: #D0C070; } 
@@ -47,7 +47,7 @@ body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; 
 .BUTTON   { color: white; border-radius: 4px; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2); padding: 2px; border: solid 2px; font-size : 1.1em;
 			text-align: center;	width : 255px; height : 30px; }
 .WIDEBUTTON   { color: white; border-radius: 4px; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2); padding: 2px; border: solid 2px; font-size : 1.1em;
-				text-align: center;	width : 395px; height : 30px; }
+				text-align: center;	width : 290px; height : 30px; }
 .HIDE	  { display:none; }
 .FONT24   { font-size: 24px; }
 .PAGE     { break-before: always;  page-break-before: always; display: block; } 
@@ -66,12 +66,12 @@ body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; 
 .R105     { width: 6rem; text-align: right; }
 .TENY     { width: 7rem;  text-align: right; }
 .MONY     { width: 7rem; text-align: right; font-family:monospace; font-size:1.3em; }
-.NAME     { width: 7rem; text-align: left;  }
 .CNAM     { width: 7rem; text-align: center;  }
 .CNAMF    { width: 7.3rem; text-align: center;  }
+.NAME     { width: 7.6rem; text-align: left;  }
 .IDNT     { width: 8rem; text-align: right; }
 .LNAM     { width: 9rem; text-align: left;}
 .L280     { width:12rem; text-align: left;} 
 .LTXT     { width:14rem; text-align: left;}
-.FLEX     { width:52rem; text-align: left; } 
+.FLEX     { width:890px; text-align: left; } 
 
