--- a/src/goldenbox.css
+++ b/src/goldenbox.css
@@ -3,15 +3,15 @@ body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; 
 .BORDER {  padding: 1px; max-width:53rem; border-style: solid; border-radius: 3px; border-width: 1px; border-color: #F0D0C0;  background-color: #FFF; color: #0F0F0F; }
 
 .KNMAIN    { display:table;       margin: 4px;  min-height: 20px;  font-family :inherit; font-size: 11px; font-weight:400; border-color: #817137; border-style: solid; } 
-.KNSEP     { display: table-cell; min-width:30px; max-width:30px; float:left; }
-.KNCOL     { display: table-cell; min-width:107px; max-width:107px; float:left; border-color: #817137; border-style: solid; padding: 2px; }
-.KNBUTTON  { display: table-cell; min-width:107px; max-width:107px; float:left; border-color: #D0C070; border-style: solid; padding: 2px; text-align:center; }
+.KNSEP     { display:table-cell; min-width:30px; max-width:30px; float:left; }
+.KNCOL     { display:table-cell; min-width:107px; max-width:107px; float:left; border-color: #817137; border-style: solid; padding: 2px; }
+.KNBUTTON  { display:table-cell; min-width:107px; max-width:107px; float:left; border-color: #D0C070; border-style: solid; padding: 2px; text-align:center; }
 
 
 .KNTABLE  {  display:table; color:#423C57; font-family: Bahnschrift,monospace; font-size: 11px; height: 18px;  page-break-after: always  }
 .NOTABLE  { display:none; }
 
-.KNLINE    {  vertical-align: top;  width:75rem; padding: 1px; float: left;  min-height: 20px;  font-family :inherit; font-size: 11px; font-weight:400; text-align: center; } 
+.KNLINE    { display:table-row; vertical-align: top;  width:75rem; padding: 1px; float: left;  min-height: 20px;  font-family :inherit; font-size: 11px; font-weight:400; text-align: center; } 
 .KNPROJ    { color:#602848; vertical-align: top;  width:75rem; padding: 1px; float: left;  min-height: 20px;  font-family :inherit; font-size: 11px; font-weight:400; text-align: center;}
 .KNFILE    { color:#907040; vertical-align: top;  width:75rem; padding: 1px; float: left;  min-height: 20px;  font-family :inherit; font-size: 11px; font-weight:400; text-align: center;}
 
@@ -21,7 +21,7 @@ body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; 
 
 .SWITCH   {                   padding: 1px; border: none; font-size: 1em; font-weight:400;  } 
 .BIGCELL  {                   padding: 1px;               float: left; color:inherit;min-height: 48px; font-family: inherit; font-size: 0.8em; font-weight:400; text-align: center; background-color: inherit; } 
-.FIELD    { overflow:hidden;  padding: 1px; border: none; float: left;                                  font-family: inherit; font-size: inherit; font-weight:inherit; color: inherit;} 
+.FIELD    { display:table-cell; overflow:hidden;  padding: 1px; border: none; float: left;                                  font-family: inherit; font-size: inherit; font-weight:inherit; color: inherit;} 
 .BUTTON   { color: white; border-radius: 4px; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2); background: #817137; padding: 2px; border: solid 2px; font-size : 1.1em;
 			text-align: center;	width : 328px; height : 30px; }
 .HIDE	  { display:none; }
