--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;  margin: 0;  font-family: Bahnschrift, monospace, sans-serif; }
 
-.BORDER {  padding: 1px; max-width:900px; border-style: solid; border-radius: 4px; border-width: 1px; border-color: #EEEEEE;  background-color: #FFF; color: #00FF00; }
+.BORDER {  padding: 1px; max-width:940px; border-style: solid; border-radius: 4px; border-width: 1px; border-color: #EEEEEE;  background-color: #FFF; color: #00FF00; }
 
 .KNMAIN    { display:table;       margin: 4px;  min-height: 20px;  font-family :inherit; font-size: 11px; font-weight:400; border-color: #F0D0A0; border-style: solid; } 
 .KNSEP     { display: table-cell; min-width:30px; max-width:30px; float:left; }
@@ -10,7 +10,7 @@ body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; 
 .KNTABLE  {  display:table; color:#000000; font-family: Bahnschrift,monospace; font-size: 11px; height: 18px;  page-break-after: always; border-color: #EEEEEE; }
 .NOTABLE  { display:none; }
 
-.KNLINE    { display:table-cell; vertical-align: top;  width:880px; padding: 1px; float: left;  min-height: 20px;  font-family :inherit; font-size: 11px; font-weight:400; text-align: center; } 
+.KNLINE    { display:table-cell; vertical-align: top;  width:940px; padding: 1px; float: left;  min-height: 20px;  font-family :inherit; font-size: 11px; font-weight:400; text-align: center; } 
 .NONE      { color:#000000;  }
 .BRIGHT    { color:#000000; border-color: #F0D0A0; border-style:solid; }
 
@@ -20,12 +20,12 @@ body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; 
 
 
 .NOTE     { padding: 1px; border-color: inherit; border-style: solid; border-width: 1px ; float: left; text-align: left;  font-family: inherit; font-size: 9px; font-weight:inherit; } 
-.FIELD    { overflow:hidden;  padding: 1px; border: none; float: left;                                  font-family: inherit; font-size: inherit; font-weight:inherit; } 
+.FIELD    { max-width: 125px; overflow:hidden;  padding: 1px; border: none; float: left;                                  font-family: inherit; font-size: inherit; font-weight:inherit; } 
 .RIM      {  height: 0px; margin: 2px; text-align:center; border-color: #CED1D3; border-style: solid; float: left; background-color:transparent; }
 .KNBUTTON  { display: table-cell; min-width:170px; max-width:170px; float:left; border-style: solid; padding: 2px; text-align:center;border-color:inherit }
 
 
-.DOMCOLOR { color: #D0C070; border-color: #D0C070; } 
+.DOMCOLOR { color: #978a49; border-color: #91854d; } 
 
 
 .RISKEDIT  { color:#716230; border-color: #A19046; border-style:solid; background:#D0C070 }
